<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.opencartis.georfid.Login"
    tools:showIn="@layout/activity_login"
    android:gravity="center"
    android:background="@drawable/backgroundlogin">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:id="@+id/editTextLoginUser"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#E1E1E1E1"
        android:hint="@string/user"
        android:paddingLeft="20dp" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_below="@+id/editTextLoginUser"
        android:id="@+id/spaceLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:background="#E1E1E1E1"
        android:id="@+id/editTextLoginPassword"
        android:layout_below="@+id/spaceLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/password"
        android:paddingLeft="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/btnLogin"
        android:layout_below="@+id/editTextLoginPassword"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_password"
        android:id="@+id/chkRememberMe"
        android:layout_below="@+id/btnLogin"
        android:layout_alignRight="@+id/editTextLoginPassword"
        android:layout_alignEnd="@+id/editTextLoginPassword" />

</RelativeLayout>
