<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.opencartis.georfid.SelectOption"
    tools:showIn="@layout/activity_select_option"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/select_option"
        android:id="@+id/textView"
        android:gravity="center" />

    <Button
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:text="@string/new_element"
        android:id="@+id/btnNewElement" />

    <Button
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:text="@string/query_element"
        android:id="@+id/btnReadElement" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:minHeight="100dp" />

</LinearLayout>
