<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.opencartis.georfid.ReadElement"
    tools:showIn="@layout/activity_read_element"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@mipmap/nfc_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/textViewReadElementTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/btnReadElement"
                android:layout_alignRight="@+id/btnReadElement"
                android:layout_below="@+id/readElementImage"
                android:text="-- -- -- --" />

            <Button
                android:id="@+id/btnReadElement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView3"
                android:layout_toEndOf="@+id/imageView3"
                android:layout_toRightOf="@+id/imageView3"
                android:text="@string/read_rfid_nfc" />
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/readElementDataContent">

        <ImageView
            android:id="@+id/readElementImage"
            android:layout_width="fill_parent"
            android:layout_height="300px"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/textViewReadElementType"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.0"
        android:id="@+id/linearLayoutReadElementButtons">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_height="wrap_content"
        android:layout_weight="0.33"
        android:text="@string/viewincident"
        android:id="@+id/btnViewTask"
        android:layout_gravity="center_horizontal"
        android:layout_width="0dip" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_weight="0.33"
        android:layout_height="wrap_content"
        android:text="@string/create_task"
        android:id="@+id/btnCreateTask"
        android:layout_gravity="center_horizontal"
        android:layout_width="0dip" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_height="wrap_content"
        android:layout_weight="0.33"
        android:text="@string/delete_element"
        android:id="@+id/btnRemoveElement"
        android:layout_gravity="center_horizontal"
        android:layout_width="0dip" />
    </LinearLayout>

</LinearLayout>
